--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -27,6 +27,7 @@
 
 
 \setcounter{secnumdepth}{1}
+\setcounter{tocdepth}{1}
 
 
 \title{Research skills\\
@@ -415,7 +416,7 @@ Obviously, the last item would be the most desirable form of novelty. In any cas
 
 Great questions\marginnote{If you want to aim really high, you can read the essay ``Ten Simple Rules to Win a Nobel Prize'' by \citep{Roberts-TenSimpleRules-2015}} are also to test a common belief that was not tested before, or question something which was considered established knowledge. 
 
-\section{Experimental design and validity}
+\section{Validity}
 
 Assuming we have a question of interest and novelty, that seems to be worth pursuing - how can we make sure that we set up a valid scientific procedure to answer it?
 
